--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+    
     <title>Microsoft</title>
 </head>
 <body>
@@ -25,7 +26,7 @@
             <li class="res">All Microsoft <i class="bi bi-arrow-down-short"></i></li>
             <li><i class="bi bi-search"></i></li>
             <li><i class="bi bi-cart3"></i></li>
-            <li> <i class="bi bi-person-circle"></i></li>
+            <li><a href="login.html"><i class="bi bi-person-circle"></i></a> </li>
         </ul>
     </span>
     </nav>
